--- a/javascript.html
+++ b/javascript.html
@@ -19,7 +19,7 @@
 <div id="bandeau">
   <div id="titre"> <h1> Memento </h1> </div>
   <nav>
-    <div class="element"> <a href="index.html">HTML</a> </div>
+    <div class="element"> <a href="html.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
@@ -30,10 +30,6 @@
 </div>
 
 <section id="principal">
-
-<p>JavaScript est un langage interprété qui se veut simple et dont le but initial était de rendre dynamiques et interactives les pages Web.</p>
-
-<hr>
 
 <p style="font-weight:bold"> Table des matières :
   <ul>
