--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="bloc">
         <div class="gauche">
-            <p>Python est un langage de programmation interprété dont la philosophie repose sur la simplicité du code et l'implémentation de bonnes pratiques. Rien n'est fait pour empêcher le programmeur de mener une action, même si elle semble inappropriée.</p>
+            <p>Python est un langage de programmation interprété dont la philosophie repose sur la simplicité du code et l'implémentation de bonnes pratiques. Rien n'est fait pour empêcher le programmeur de mener une action, même si elle semble inappropriée. Python est particulièrement utilisé dans les environnements scientifiques et pour la manipulation de données.</p>
         </div>
 
         <div class="droite">
