--- a/python.html
+++ b/python.html
@@ -104,6 +104,11 @@ function affichageConditionnel(bouton, id) {
   <pre><code class="language-python">#!/usr/bin/python3.7
 # -*-coding:Utf-8 -*</code></pre>
 
+  <p>Lors de la création d'un projet, il faut spécifier l'environnement dans lequel on travaille, comme par exemple virtualenv ou conda.</p>
+
+  <p>L'installation de l'éditeur JetBrains PyCharm-community se fait sur Linux grâce à l'instruction au Terminal :</p>
+  <pre><code>sudo snap install pycharm-community --classic</code></pre>
+
   <h4>Particularité du système Windows</h4>
 
   <p>Il est nécessaire de mettre en pause le programme en fin d'exécution afin de pouvoir lire le résultat. Préciser l'encodage peut s'avérer nécessaire sous Windows.</p>
