--- a/git.html
+++ b/git.html
@@ -51,7 +51,7 @@
 
 <p>Pour configurer les données utilisateur de <em>git</em> :</p>
 <pre>git config --global user.name "monNom"
-git config --global user-email "monEmail"</pre>
+git config --global user.email "monEmail"</pre>
 
 <p>Pour activer la couleur dans la console :</p>
 <pre>git config --global color.diff auto
@@ -63,6 +63,9 @@ git config --global color.branch auto</pre>
 
 <p>ou initialiser le dossier et démarrer de projet en local avec l'instruction :</p>
 <pre>git init</pre>
+
+  <p>Pour vérifier la configuration enregistrée :</p>
+  <pre><code>git config --list</code></pre>
 
 <!-- PRINCIPALES INSTRUCTIONS -->
 
